--- a/front-end/public/locales/vi/common.json
+++ b/front-end/public/locales/vi/common.json
@@ -235,6 +235,7 @@
   "Ba đỏ một trắng": "Ba đỏ một trắng",
   "Ba trắng một đỏ": "Ba trắng một đỏ",
   "Hai trắng hai đỏ": "Hai trắng hai đỏ",
+  "Thông tin tài khoản": "Thông tin tài khoản",
 
   "Chào mừng bạn đến với SANDS &nbsp;nhân dịp SANDS ra mắt tròn 13 tuổi, chúng tôi triển khai trương trình khuyến mãi đặc biệt:": "Chào mừng bạn đến với SANDS &nbsp;nhân dịp SANDS ra mắt tròn 13 tuổi, chúng tôi triển khai trương trình khuyến mãi đặc biệt:",
   "Nạp trên": "Nạp trên",
