--- a/front-end/public/locales/en/common.json
+++ b/front-end/public/locales/en/common.json
@@ -145,7 +145,7 @@
   "Lẻ": "Odd",
   "Lớn": "Big",
   "Nhỏ": "Small",
-  "Bi": "Bi",
+  "Bi": "Marbles",
   "Marble": "Marble",
   "Thắng": "Win",
   "Thua": "Loss",
@@ -237,6 +237,7 @@
   "Ba đỏ một trắng": "Three red one white",
   "Ba trắng một đỏ": "Three white one red",
   "Hai trắng hai đỏ": "Two white two red",
+  "Thông tin tài khoản": "Account information",
 
   "Chào mừng bạn đến với SANDS &nbsp;nhân dịp SANDS ra mắt tròn 13 tuổi, chúng tôi triển khai trương trình khuyến mãi đặc biệt:": "Welcome to SANDS on the occasion of SANDS's 13th anniversary, we are launching a special promotion program: ",
   "Nạp trên": "Deposit up on",
